test/parallel/forall/checks/with-false.chpl
// Ensure the compiler produces a graceful error.

forall Locales with (in false) {
  writeln();
}
